tests/machine/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:10: error: value cat is not a member of scala.collection.immutable.Map[String,Any]
    val result = (((for { i <- items } yield (i.cat, i)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ g => Map("cat" -> g.key, "share" -> (for { x <- g } yield if (x.flag) x.`val` else 0).sum / (for { x <- g } yield x.`val`).sum) }.toList
                                                ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:10: error: value map is not a member of Any
    val result = (((for { i <- items } yield (i.cat, i)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ g => Map("cat" -> g.key, "share" -> (for { x <- g } yield if (x.flag) x.`val` else 0).sum / (for { x <- g } yield x.`val`).sum) }.toList
                                                                                                           ^
two errors found
